--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+#Visual Studio generated files#
+######################
+*.pdb
+*.user
+*.obj
+*.iobj
+*.idb
+*.ipdb
+/.vs/
