--- a/MonkeyBattle/MonkeyBattle/MonkeyBattle/MonkeyBattle.vcxproj
+++ b/MonkeyBattle/MonkeyBattle/MonkeyBattle/MonkeyBattle.vcxproj
@@ -19,13 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\libs\jsoncpp\dist\jsoncpp.cpp" />
     <ClCompile Include="..\source\DataLibrary\DataLibrary.cpp" />
     <ClCompile Include="..\source\Game\Game.cpp" />
     <ClCompile Include="..\source\Game\GameData\Army.cpp" />
     <ClCompile Include="..\source\Game\GameData\Unit.cpp" />
     <ClCompile Include="..\source\Game\Player\Player.cpp" />
     <ClCompile Include="..\source\Game\StateMachine.cpp" />
+    <ClCompile Include="..\source\jsoncpp\jsoncpp.cpp" />
     <ClCompile Include="..\source\MonkeyBattle.cpp" />
     <ClCompile Include="..\source\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -35,8 +35,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\libs\jsoncpp\dist\json\json-forwards.h" />
-    <ClInclude Include="..\libs\jsoncpp\dist\json\json.h" />
     <ClInclude Include="..\source\CustomDefines.h" />
     <ClInclude Include="..\source\DataLibrary\DataLibrary.h" />
     <ClInclude Include="..\source\Game\Game.h" />
@@ -44,6 +42,8 @@
     <ClInclude Include="..\source\Game\GameData\Unit.h" />
     <ClInclude Include="..\source\Game\Player\Player.h" />
     <ClInclude Include="..\source\Game\StateMachine.h" />
+    <ClInclude Include="..\source\jsoncpp\json\json-forwards.h" />
+    <ClInclude Include="..\source\jsoncpp\json\json.h" />
     <ClInclude Include="..\source\stdafx.h" />
     <ClInclude Include="..\source\targetver.h" />
     <ClInclude Include="..\source\Utils\Logger.hpp" />
